--- a/components/ProductTableRow/ProductTableRow.scss
+++ b/components/ProductTableRow/ProductTableRow.scss
@@ -47,5 +47,13 @@
       opacity: 0.7;
       cursor: not-allowed;
     }
+
+    i {
+      font-size: 16px;
+    }
   }
 }
+
+// Убедитесь, что Font Awesome правильно подключен в вашем проекте
+// Если у вас используется другая библиотека иконок, замените класс fas fa-shopping-cart
+// на соответствующий класс из вашей библиотеки
