--- a/components/Admin/AdminLayout/AdminLayout.scss
+++ b/components/Admin/AdminLayout/AdminLayout.scss
@@ -1,20 +1,19 @@
 .admin-layout {
   display: flex;
   min-height: 100vh;
+  width: 100%;
 
   &__content {
     flex: 1;
-    padding-left: 280px; // Ширина сайдбара
-    transition: padding-left 0.3s ease;
-
-    @media (max-width: 992px) {
-      padding-left: 0;
-    }
+    width: 100%;
+    box-sizing: border-box;
   }
 
   &__container {
-    padding: 30px;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 30px 15px;
+    box-sizing: border-box;
   }
 }
